[gd_scene load_steps=22 format=3 uid="uid://bis8puyxq2i8f"]

[ext_resource type="Script" path="res://Scripts/UI/Main_Menu.gd" id="1_pu854"]
[ext_resource type="AudioStream" uid="uid://73klxfni2msm" path="res://Assets/Sounds/MenuAndUI/Game_Start.WAV" id="2_lg28v"]
[ext_resource type="Texture2D" uid="uid://swaog5kf3gdl" path="res://Assets/Sprites/UI/Title.png" id="2_mor0q"]
[ext_resource type="Texture2D" uid="uid://cvetjamuu0lhd" path="res://Assets/Sprites/UI/Buttons/Start_Button.png" id="3_onirk"]
[ext_resource type="Texture2D" uid="uid://5lfbylbmwklr" path="res://Assets/Sprites/UI/UIBackGroundSprite.png" id="3_qq4la"]
[ext_resource type="AudioStream" uid="uid://bd8usmux71oig" path="res://Assets/Sounds/MenuAndUI/Menu_Click.WAV" id="3_s886s"]
[ext_resource type="AudioStream" uid="uid://xd7freyfwwrb" path="res://Assets/Sounds/MenuAndUI/Menu_Select.WAV" id="4_jp4gn"]
[ext_resource type="Texture2D" uid="uid://bjqvtn08kqhv2" path="res://Assets/Sprites/UI/Buttons/OptionsButton.png" id="4_lpv1d"]
[ext_resource type="Texture2D" uid="uid://dbloualbgks2x" path="res://Assets/Sprites/UI/Buttons/Start_Button_Pressed.png" id="4_tx6gk"]
[ext_resource type="Texture2D" uid="uid://x8c1yomx3cnc" path="res://Assets/Sprites/UI/Buttons/QuitButton.png" id="5_3a7xd"]
[ext_resource type="Texture2D" uid="uid://22slbll8473u" path="res://Assets/Sprites/UI/Buttons/Start_Button_Selected.png" id="5_mauky"]
[ext_resource type="Script" path="res://Scripts/UI/Start_Button.gd" id="6_55xu1"]
[ext_resource type="Texture2D" uid="uid://dl8lt1f0qyhho" path="res://Assets/Sprites/UI/Buttons/OptionsButton_Pressed.png" id="7_640ed"]
[ext_resource type="Texture2D" uid="uid://btfkx6xgpx7h0" path="res://Assets/Sprites/UI/Buttons/OptionsButton_Selected.png" id="8_ovpdc"]
[ext_resource type="Texture2D" uid="uid://c4hvyaxv5llrp" path="res://Assets/Sprites/UI/Buttons/QuitButton_Pressed.png" id="10_6oq8k"]
[ext_resource type="Texture2D" uid="uid://srlk44d5528t" path="res://Assets/Sprites/UI/Buttons/QuitButton_Selected.png" id="11_7snne"]
[ext_resource type="PackedScene" uid="uid://xbddjqb3wxm2" path="res://Scenes/UI/scenetransition.tscn" id="14_0kjxk"]
[ext_resource type="AudioStream" uid="uid://b3p8dpj7xgjsv" path="res://Assets/Sounds/Music/BlueRustTheme.wav" id="15_ywlu5"]
[ext_resource type="Texture2D" uid="uid://dyte8fqt7m5c6" path="res://Assets/Sprites/UI/OptionsPanel.png" id="19_wa4pp"]
[ext_resource type="FontFile" uid="uid://sifmsaaopv75" path="res://Assets/Fonts/upheavtt.ttf" id="20_123r4"]
[ext_resource type="Script" path="res://Scenes/UI/VolumeSilder.gd" id="21_3nnts"]

[node name="MainMenu" type="Control" node_paths=PackedStringArray("options", "menu")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pu854")
startGameSFX = ExtResource("2_lg28v")
buttonClickSFX = ExtResource("3_s886s")
buttonSelectSFX = ExtResource("4_jp4gn")
options = NodePath("OptionsPanel")
menu = NodePath("Menu")

[node name="Menu" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="Sprite2D" type="Sprite2D" parent="Menu"]
position = Vector2(580, 326)
scale = Vector2(3.06019, 3.06019)
texture = ExtResource("2_mor0q")

[node name="Sprite2D2" type="Sprite2D" parent="Menu"]
modulate = Color(0.0784314, 0.117647, 0.133333, 0.345098)
position = Vector2(342.5, 464.5)
scale = Vector2(0.591146, 0.652778)
texture = ExtResource("3_qq4la")

[node name="Start_Button" type="TextureButton" parent="Menu"]
offset_left = 233.0
offset_top = 401.0
offset_right = 325.0
offset_bottom = 418.0
scale = Vector2(2.25, 2.25)
focus_neighbor_top = NodePath("../Quit")
focus_neighbor_bottom = NodePath("../Options")
texture_normal = ExtResource("3_onirk")
texture_pressed = ExtResource("4_tx6gk")
texture_hover = ExtResource("5_mauky")
script = ExtResource("6_55xu1")

[node name="Options" type="TextureButton" parent="Menu"]
offset_left = 233.0
offset_top = 449.0
offset_right = 332.0
offset_bottom = 463.0
scale = Vector2(2.25, 2.25)
focus_neighbor_top = NodePath("../Start_Button")
focus_neighbor_bottom = NodePath("../Quit")
texture_normal = ExtResource("4_lpv1d")
texture_pressed = ExtResource("7_640ed")
texture_hover = ExtResource("8_ovpdc")

[node name="Quit" type="TextureButton" parent="Menu"]
offset_left = 233.0
offset_top = 497.0
offset_right = 288.0
offset_bottom = 512.0
scale = Vector2(2.25, 2.25)
focus_neighbor_top = NodePath("../Options")
focus_neighbor_bottom = NodePath("../Start_Button")
texture_normal = ExtResource("5_3a7xd")
texture_pressed = ExtResource("10_6oq8k")
texture_hover = ExtResource("11_7snne")

[node name="Scenetransition" parent="." instance=ExtResource("14_0kjxk")]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_ywlu5")
autoplay = true
bus = &"BGM"

[node name="OptionsPanel" type="Sprite2D" parent="."]
visible = false
position = Vector2(580.722, 326)
scale = Vector2(3.04832, 3.06019)
texture = ExtResource("19_wa4pp")

[node name="BackButton" type="Button" parent="OptionsPanel"]
offset_left = 120.157
offset_top = 73.525
offset_right = 173.157
offset_bottom = 98.525
theme_override_fonts/font = ExtResource("20_123r4")
theme_override_font_sizes/font_size = 20
text = "Back"

[node name="Master" type="Label" parent="OptionsPanel"]
offset_left = 32.568
offset_top = -37.5794
offset_right = 72.568
offset_bottom = -27.5794
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("20_123r4")
theme_override_font_sizes/font_size = 20
text = "Master"

[node name="HSlider" type="HSlider" parent="OptionsPanel/Master"]
offset_left = 110.225
offset_top = 3.92134
offset_right = 226.225
offset_bottom = 19.9213
step = 0.0
script = ExtResource("21_3nnts")

[node name="SFX" type="Label" parent="OptionsPanel"]
offset_left = 32.568
offset_top = -16.6656
offset_right = 105.568
offset_bottom = 1.33435
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("20_123r4")
theme_override_font_sizes/font_size = 20
text = "SFX"

[node name="HSlider2" type="HSlider" parent="OptionsPanel/SFX"]
offset_left = 110.225
offset_top = 2.6142
offset_right = 226.225
offset_bottom = 18.6142
step = 0.0
script = ExtResource("21_3nnts")

[node name="BGM" type="Label" parent="OptionsPanel"]
offset_left = 32.568
offset_top = 4.90166
offset_right = 105.568
offset_bottom = 22.9017
scale = Vector2(0.5, 0.5)
theme_override_fonts/font = ExtResource("20_123r4")
theme_override_font_sizes/font_size = 20
text = "BGM"

[node name="HSlider3" type="HSlider" parent="OptionsPanel/BGM"]
offset_left = 110.225
offset_top = 1.96063
offset_right = 226.225
offset_bottom = 17.9606
step = 0.0
script = ExtResource("21_3nnts")

[node name="Node" type="Node" parent="."]

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="mouse_entered" from="Menu/Start_Button" to="." method="_on_start_button_mouse_entered"]
[connection signal="pressed" from="Menu/Start_Button" to="." method="_on_start_pressed"]
[connection signal="mouse_entered" from="Menu/Options" to="." method="_on_options_mouse_entered"]
[connection signal="pressed" from="Menu/Options" to="." method="_on_options_pressed"]
[connection signal="mouse_entered" from="Menu/Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="Menu/Quit" to="." method="_on_quit_pressed"]
[connection signal="mouse_entered" from="OptionsPanel/BackButton" to="." method="_on_back_button_mouse_entered"]
[connection signal="pressed" from="OptionsPanel/BackButton" to="." method="_on_back_button_pressed"]
